# gaia-agent

./: .gitignore  SPACE_README.md  app.py  packages.txt  pyproject.toml  requirements.txt
.omc/sessions/: fa0f1ea1-45ad-4bec-959c-1d57813f38d4.json
src/gaia_agent/: __init__.py  agent.py  cache.py  formatter.py  graph.py  llm.py  prompts.py  state.py
src/gaia_agent/nodes/: __init__.py  agent.py  coerce.py  decompose.py  format_pass.py  tool_executor.py
src/gaia_agent/tools/: __init__.py  attachments.py  exec_code.py  search.py  webpage.py  wikipedia.py  youtube.py
